<resources>
    <string name="app_name">Calculator</string>
    <string name="nullValue"> </string>
    <string name="numberOne">1</string>
    <string name="numberTwo">2</string>
    <string name="numberThree">3</string>
    <string name="numberFour">4</string>
    <string name="numberFive">5</string>
    <string name="numberSix">6</string>
    <string name="numberSeven">7</string>
    <string name="numberEight">8</string>
    <string name="numberNine">9</string>
    <string name="numberZero">0</string>
    <string name="plus">+</string>
    <string name="less">-</string>
    <string name="multiplication">*</string>
    <string name="division">/</string>
    <string name="eraseAll">CE</string>
    <string name="erase">C</string>
    <string name="point">.</string>
    <string name="equals">=</string>
    <string name="parenthesisOpen">(</string>
    <string name="parenthesisClose">)</string>
    <string name="modeBasic">Basic</string>
    <string name="modeAdvanced">Advanced</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="exponent">exp</string>
    <string name="PI">PI</string>
    <string name="error">Syntax Error</string>

</resources>
