<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ori"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".AdvancedCalcActivity">


    <Switch
        android:id="@+id/switch_mode_adv"
        android:layout_width="@dimen/switchWidth"
        android:layout_height="@dimen/switchHeight"
        android:layout_marginStart="@dimen/labelMarginLeft"
        android:layout_marginLeft="@dimen/labelMarginLeft"
        android:layout_marginTop="8dp"
        android:checked="true"
        android:gravity="center_vertical"
        android:onClick="switch_mode_adv"
        android:text="@string/modeAdvanced"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:textOff="@string/modeAdvanced"
        android:textOn="@string/modeBasic"
        android:textSize="@dimen/switchTextSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_values_adv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/labelValuesHeight"
        android:layout_marginLeft="@dimen/labelMarginLeft"
        android:layout_marginRight="@dimen/labelMarginRight"
        android:gravity="end"
        android:text="@string/nullValue"
        android:textAlignment="textEnd"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/valuesTextSize"
        android:layout_marginStart="@dimen/labelMarginLeft"
        android:layout_marginEnd="@dimen/labelMarginRight" />

    <TextView
        android:id="@+id/label_result_adv"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="match_parent"
        android:layout_height="@dimen/labelAdvResultHeight"
        android:layout_marginLeft="@dimen/labelMarginLeft"
        android:layout_marginRight="@dimen/labelMarginRight"
        android:gravity="end"
        android:text="@string/nullValue"
        android:textAlignment="textEnd"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/resultTextSize"
        android:layout_marginStart="@dimen/labelMarginLeft"
        android:layout_marginEnd="@dimen/labelMarginRight" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/grid_buttons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_point_adv"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btnAdvHeight"
            android:background="@color/colorPrimary"
            android:onClick="btn_point_adv"
            android:text="@string/point"
            android:textSize="@dimen/textSize"
            app:layout_column="0"
            app:layout_row="5" />

        <Button
            android:id="@+id/btn_numberOne_adv"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btnAdvHeight"
            android:background="@color/colorPrimary"
            android:onClick="btn_number1_adv"
            android:text="@string/numberOne"
            android:textSize="@dimen/textSize"
            app:layout_column="0"
            app:layout_row="2" />

        <Button
            android:id="@+id/btn_numberTwo_adv"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btnAdvHeight"
            android:background="@color/colorPrimary"
            android:onClick="btn_number2_adv"
            android:text="@string/numberTwo"
            android:textSize="@dimen/textSize"
            app:layout_column="1"
            app:layout_row="2" />

        <Button
            android:id="@+id/btn_numberThree_adv"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btnAdvHeight"
            android:background="@color/colorPrimary"
            android:onClick="btn_number3_adv"
            android:text="@string/numberThree"
            android:textSize="@dimen/textSize"
            app:layout_column="2"
            app:layout_row="2" />

        <Button
            android:id="@+id/btn_subtraction_adv"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btnAdvHeight"
            android:background="@color/colorAccent"
            android:onClick="btn_less_adv"
            android:text="@string/less"
            android:textSize="@dimen/textSize"
            app:layout_column="3"
            app:layout_row="2" />

        <Button
            android:id="@+id/btn_numberFour_adv"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btnAdvHeight"
            android:background="@color/colorPrimary"
            android:onClick="btn_number4_adv"
            android:text="@string/numberFour"
            android:textSize="@dimen/textSize"
            app:layout_column="0"
            app:layout_row="3" />

        <Button
            android:id="@+id/btn_numberFive_adv"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btnAdvHeight"
            android:background="@color/colorPrimary"
            android:onClick="btn_number5_adv"
            android:text="@string/numberFive"
            android:textSize="@dimen/textSize"
            app:layout_column="1"
            app:layout_row="3" />

        <Button
            android:id="@+id/btn_numberSix_adv"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btnAdvHeight"
            android:background="@color/colorPrimary"
            android:onClick="btn_number6_adv"
            android:text="@string/numberSix"
            android:textSize="@dimen/textSize"
            app:layout_column="2"
            app:layout_row="3" />

        <Button
            android:id="@+id/btn_division_adv"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btnAdvHeight"
            android:background="@color/colorAccent"
            android:onClick="btn_division_adv"
            android:text="@string/division"
            android:textSize="@dimen/textSize"
            app:layout_column="3"
            app:layout_row="3" />

        <Button
            android:id="@+id/btn_numberSeven_adv"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btnAdvHeight"
            android:background="@color/colorPrimary"
            android:onClick="btn_number7_adv"
            android:text="@string/numberSeven"
            android:textSize="@dimen/textSize"
            app:layout_column="0"
            app:layout_row="4" />

        <Button
            android:id="@+id/btn_numberEight_adv"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btnAdvHeight"
            android:background="@color/colorPrimary"
            android:onClick="btn_number8_adv"
            android:text="@string/numberEight"
            android:textSize="@dimen/textSize"
            app:layout_column="1"
            app:layout_row="4" />

        <Button
            android:id="@+id/btn_numberNine_adv"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btnAdvHeight"
            android:background="@color/colorPrimary"
            android:onClick="btn_number9_adv"
            android:text="@string/numberNine"
            android:textSize="@dimen/textSize"
            app:layout_column="2"
            app:layout_row="4" />

        <Button
            android:id="@+id/btn_Pi"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btnAdvHeight"
            android:layout_marginBottom="5dp"
            android:background="@color/colorPrimary"
            android:onClick="btn_PI"
            android:text="@string/PI"
            android:textSize="@dimen/textSize"
            app:layout_column="3"
            app:layout_row="0" />

        <Button
            android:id="@+id/btn_exponent"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btnAdvHeight"
            android:layout_marginBottom="5dp"
            android:background="@color/colorPrimary"
            android:onClick="btn_exp"
            android:text="@string/exponent"
            android:textSize="@dimen/textSize"
            app:layout_column="2"
            app:layout_row="0" />

        <Button
            android:id="@+id/btn_cos"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btnAdvHeight"
            android:layout_marginBottom="5dp"
            android:background="@color/colorPrimary"
            android:onClick="btn_cos"
            android:text="@string/cos"
            android:textSize="@dimen/textSize"
            app:layout_column="1"
            app:layout_row="0" />

        <Button
            android:id="@+id/btn_sin"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btnAdvHeight"
            android:layout_marginBottom="5dp"
            android:background="@color/colorPrimary"
            android:onClick="btn_sin"
            android:text="@string/sin"
            android:textSize="@dimen/textSize"
            app:layout_column="0"
            app:layout_row="0" />

        <Button
            android:id="@+id/btn_multiplication_adv"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btnAdvHeight"
            android:background="@color/colorAccent"
            android:onClick="btn_multiply_adv"
            android:text="@string/multiplication"
            android:textSize="@dimen/textSize"
            app:layout_column="3"
            app:layout_row="4" />

        <Button
            android:id="@+id/btn_equals_adv"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btnAdvHeight"
            android:background="@color/cardview_light_background"
            android:text="@string/equals"
            android:textSize="@dimen/textSize"
            app:layout_column="2"
            app:layout_row="5" />

        <Button
            android:id="@+id/btn_addition_adv"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btnAdvHeight"
            android:background="@color/colorAccent"
            android:onClick="btn_plus_adv"
            android:text="@string/plus"
            android:textSize="@dimen/textSize"
            app:layout_column="3"
            app:layout_row="5" />

        <Button
            android:id="@+id/btn_numberZero_adv"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btnAdvHeight"
            android:background="@color/colorPrimary"
            android:onClick="btn_number0_adv"
            android:text="@string/numberZero"
            android:textSize="@dimen/textSize"
            app:layout_column="1"
            app:layout_row="5" />

        <Button
            android:id="@+id/btn_erase_adv"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btnAdvHeight"
            android:background="@color/colorPrimary"
            android:onClick="btn_eraseAll_adv"
            android:text="@string/erase"
            android:textSize="@dimen/textSize"
            app:layout_column="2"
            app:layout_row="1" />

        <Button
            android:id="@+id/btn_eraseAll_adv"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btnAdvHeight"
            android:background="@color/colorPrimary"
            android:onClick="btn_erase_adv"
            android:text="@string/eraseAll"
            android:textSize="@dimen/textSize"
            app:layout_column="3"
            app:layout_row="1" />

        <Button
            android:id="@+id/btn_parenthesisClose_adv"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btnAdvHeight"
            android:background="@color/colorPrimary"
            android:onClick="btn_parenthesisClose_adv"
            android:text="@string/parenthesisClose"
            android:textSize="@dimen/textSize"
            app:layout_column="1"
            app:layout_row="1" />

        <Button
            android:id="@+id/btn_parenthesisOpen_adv"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btnAdvHeight"
            android:background="@color/colorPrimary"
            android:onClick="btn_parenthesisOpen_adv"
            android:text="@string/parenthesisOpen"
            android:textSize="@dimen/textSize"
            app:layout_column="0"
            app:layout_row="1" />

    </androidx.gridlayout.widget.GridLayout>
</LinearLayout>